Reduce hero height on mobile, fix wrapping on fees

--- a/www/resources/assets/local/sass/cr/home/fee/_fee.scss
+++ b/www/resources/assets/local/sass/cr/home/fee/_fee.scss
@@ -4,9 +4,6 @@
 }
 
 .cr-fee__breakdown {
-    padding-left: 15px;
-    padding-right: 15px;
-
     @media (min-width: $grid-tablet-breakpoint) and (max-width: $grid-desktop-breakpoint - 1) {
         padding-left: 20%;
         padding-right: 20%;
