--- a/www/resources/assets/local/sass/inline.scss
+++ b/www/resources/assets/local/sass/inline.scss
@@ -27,17 +27,16 @@ hr {
   background-color: unquote("rgb(#{$color-primary})");
 }
 
+
 .cr-hero {
+  position: relative;
   background-image: linear-gradient(-410deg, #455A64 20%, #607D8B 95%);
 
-  min-height: calc(750px - #{$layout-mobile-header-height});
-  padding: 60px 0;
+  min-height: calc(400px - #{$layout-mobile-header-height});
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   @media (min-width: $grid-desktop-breakpoint) {
-    min-height: calc(750px - #{$layout-desktop-header-height});
-  }
-
-  & + div {
-    display: none;
+    min-height: calc(640px - #{$layout-desktop-header-height});
   }
 }
